--- a/chatbot_app_lexart/src/styles/Home.module.css
+++ b/chatbot_app_lexart/src/styles/Home.module.css
@@ -1,11 +1,25 @@
+.verify_user {
+  align-items: center;
+  background-color: white;
+  border-radius: 20px;
+  color: #0085FF;
+  display: flex;
+  width: 40px;
+}
+
+.verify_user svg:nth-child(2) {
+  height: 15px;
+  width: 15px;
+}
+
 .chat_header {
   align-items: center;
   background-color: #0085FF;
   color: white;
   display: flex;
-  height: 11vh;
+  height: 9vh;
   justify-content: space-between;
-  padding: 0 2px;
+  padding: 0 5px;
   width: 100%;
 }
 
@@ -19,27 +33,48 @@
 }
 
 .chat_header_user img{
-  height: 55px;
-  width: 60px;
+  height: 47px;
+  width: 50px;
 }
 
 .chat_header_user_info {
   display: flex;
   flex-direction: column;
-  font-size: 14px;
+  font-size: 12px;
   justify-content: center;
 }
 
-.verify_user {
-  align-items: center;
-  background-color: white;
-  border-radius: 20px;
-  color: #0085FF;
+.chat_user_info {
   display: flex;
-  width: 40px;
+  flex-direction: column;
+  gap: 5px;
 }
 
-.verify_user svg:nth-child(2) {
+.chat_user_info h2 {
+  font-size: 22px;
+}
+
+.chat_user_info span {
+  font-size: 13px;
+}
+
+.chat_user_info span:nth-child(3) {
+  color: rgba(14, 13, 13, 0.527);
+}
+
+.chat_user_info svg {
   height: 15px;
   width: 15px;
+  background-color: #0085FF;
+  color: white;
+  border-radius: 50%;
+}
+
+.chat_user {
+  align-items: center;
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+  display: flex;
+  margin: 1rem 0;
+  padding: 1rem 0;
 }
