--- a/chatbot_app_lexart/src/styles/Home.module.css
+++ b/chatbot_app_lexart/src/styles/Home.module.css
@@ -112,3 +112,41 @@
   padding: 1rem 0;
 }
 
+.chat_messages {
+  height: 65%;
+}
+
+.chat_type_messages {
+  align-items: center;
+  bottom: 0%;
+  border-top: 1px solid black;
+  display: flex;
+  justify-content: space-between;
+  padding: 7px;
+  position: fixed;
+  width: 100%;
+}
+
+.input_message input {
+  border-radius: 6px;
+  border: 1px solid gray;
+  padding: 10px;
+  position: relative;
+}
+
+.input_message svg {
+  color: #0085FF;
+  position: absolute;
+  right: 13%;
+  top: 25%;
+}
+
+.add_icon {
+  border-radius: 50%;
+  background-color: #0085FF;
+  color: white;
+}
+
+.send_message {
+  color: #0085FF;
+}
