feat: adding styles for messages in a mobile device

--- a/chatbot_app_lexart/src/styles/Home.module.css
+++ b/chatbot_app_lexart/src/styles/Home.module.css
@@ -117,6 +117,7 @@
 }
 
 .chat_type_messages {
+  background-color: white;
   align-items: center;
   bottom: 0%;
   border-top: 1px solid black;
@@ -125,6 +126,49 @@
   padding: 7px;
   position: fixed;
   width: 100%;
+}
+
+.chat_messages {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 1rem;
+}
+
+.chat_time {
+  margin-bottom: 1rem;
+  color: rgba(0, 0, 0, 0.774);
+}
+
+.message {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+}
+
+.message p {
+  background-color: #e3e3e3;
+  width: 70%;
+  font-size: 14px;
+  padding: 8px;
+  border-radius: 10px 10px 10px 0;
+  margin-bottom: 1rem;
+}
+
+.message_own { 
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.message_own p { 
+  background-color: #0085FF;
+  color: white;
+  width: 70%;
+  font-size: 14px;
+  padding: 8px;
+  border-radius: 10px 10px 0 10px;
+  margin-bottom: 1rem;
 }
 
 .input_message input {
